--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.20.0'
     implementation 'com.google.android.material:material:1.6.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
 }
