--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
+    implementation "me.saket.swipe:swipe:1.2.0"
+
 }
