--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     implementation "me.saket.swipe:swipe:1.2.0"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
 }
