--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
 
     implementation "me.saket.swipe:swipe:1.2.0"
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    implementation 'io.coil-kt:coil-compose:2.4.0'
 
 }
