--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation "io.github.g0dkar:qrcode-kotlin-android:3.3.0"
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+    implementation "com.google.accompanist:accompanist-permissions:0.25.1"
 
 }
