--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation "com.google.accompanist:accompanist-permissions:0.25.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
 
 }
