--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,6 @@ dependencies {
     implementation "com.google.accompanist:accompanist-permissions:0.25.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.1"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
 }
