--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,11 +75,11 @@ dependencies {
     implementation "me.saket.swipe:swipe:1.2.0"
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation 'io.coil-kt:coil-compose:2.4.0'
-    implementation "io.github.g0dkar:qrcode-kotlin-android:3.3.0"
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation "com.google.accompanist:accompanist-permissions:0.25.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.1"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'com.google.zxing:android-core:3.3.0'
 
 }
